--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="welcomeTitle">Welcome to the ArbitrageProductTracker</string>
     <string name="welcomeContent">Welcome to the ArbitrageProductTracker!\n\n This application allows you to keep track of your selling inventory for your Retail Arbitrage quests! The application allows you to learn more about selling products online with links to helpful resources found below.\n\n There is page which allows you to add products to your inventory through either scanning a product UPC, or manually entering a product UPC.\n\n Your inventory keeps track of your stock that you have, and can be edited, deleted, and added to at your discretion.\n\n There are statistics given to you about your inventory which can help you analyze your current selling situation and make choices.</string>
     <string name="webLinkIntent">Learn about Amazon FBA from JungleScout</string>
+    <string name="textIntent">Get an eBook Link Texted of Retail Arbitrage by Chris Green!</string>
+    <string name="phoneHint">Enter your number and click below!</string>
 
     <string name="statOne">The Number of Items in your Inventory</string>
     <string name="statTwo">The Total of your Inventory</string>
