--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="statTwo">The Total of your Inventory</string>
     <string name="statThree">The Most Expensive Item in your Inventory</string>
     <string name="statFour">The Average Price of your Inventory Items</string>
+
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
     <string name="sync_header">Sync</string>
@@ -38,4 +39,18 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
+
+    <!-- Credits Screen content -->
+    <string name="credits_title">Application Credits</string>
+    <string name="api_list">The API\'s used in this application are:</string>
+    <string name="api_doc_title">API Documentation</string>
+    <string name="picasso_button">Picasso for Image Loading</string>
+    <string name="ebay_button">EBay Product API for Product Fetching</string>
+    <string name="google_button">Google Code Scanner for UPC Scanning</string>
+    <string name="content_title">Content Sources</string>
+    <string name="content_text">The textual content in this application is created by ourselves. The intents use external websites which are refrenced in the intent buttons which launch them. The app logo is created by us and any other documentation we used comes from the Android Developers Website.</string>
+    <string name="readmore_button">BorjaBravo\'s READMORE Textview Extension on GitHub</string>
+    <string name="final_messages">Final Messages</string>
+    <string name="final_message_content">Thank you for using our application! If you are ready to start your retail arbitrage endeavours then click the button below to find a nearby location to source for products. Happy Flipping!</string>
+    <string name="sourcing_location_button">Local Sourcing Location</string>
 </resources>
