-Fixed more ui issues.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,10 +20,13 @@
     <string name="textIntent">Get an eBook Link Texted of Retail Arbitrage by Chris Green!</string>
     <string name="phoneHint">Enter your number and click below!</string>
 
+    <string name="noItems">No Products in Inventory. Add products to see statistics!</string>
+    <string name="noItemValue">----------</string>
     <string name="statOne">The Number of Items in your Inventory</string>
     <string name="statTwo">The Total of your Inventory</string>
     <string name="statThree">The Most Expensive Item in your Inventory</string>
     <string name="statFour">The Average Price of your Inventory Items</string>
+
 
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
