--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,7 @@
     <string name="final_messages">Final Messages</string>
     <string name="final_message_content">Thank you for using our application! If you are ready to start your retail arbitrage endeavours then click the button below to find a nearby location to source for products. Happy Flipping!</string>
     <string name="sourcing_location_button">Local Sourcing Location</string>
+    <string name="nav_products_title">My Products</string>
+    <string name="nav_statistics_title">Statistics</string>
+    <string name="nav_credits_title">Credits</string>
 </resources>
