Added an additional stats for the lowest priced item and also made it so the numeric values in the stats viewpager are formatted with the users selected currency

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,8 @@
     <string name="statOne">The Number of Items in your Inventory</string>
     <string name="statTwo">The Total of your Inventory</string>
     <string name="statThree">The Most Expensive Item in your Inventory</string>
-    <string name="statFour">The Average Price of your Inventory Items</string>
+    <string name="statFour">The Least Expensive Item in your Inventory</string>
+    <string name="statFive">The Average Price of your Inventory Items</string>
 
 
     <!-- Preference Titles -->
